samples/_failures_safe/1761424152_098239_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_890b2883.c: In function ‘main’:
./samples/SAFE/__tmp_890b2883.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
